[gd_scene load_steps=18 format=3 uid="uid://bqc000t67w6tv"]

[ext_resource type="Script" path="res://scene/menu/Editor/Editor.gd" id="1_nvkhc"]
[ext_resource type="Script" path="res://scene/menu/Editor/CameraController.gd" id="2_kwb2o"]
[ext_resource type="Script" path="res://scene/menu/Editor/LiveCodeContainer.gd" id="3_4fm5q"]
[ext_resource type="Script" path="res://scene/menu/Editor/SchematicContainer.gd" id="5_txyhk"]
[ext_resource type="Script" path="res://scene/menu/Editor/SettingUI.gd" id="6_4411a"]
[ext_resource type="Script" path="res://scene/menu/Editor/LogPanel.gd" id="7_oeyp2"]

[sub_resource type="Environment" id="Environment_stjhn"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.53
glow_strength = 0.92
glow_bloom = 0.27
glow_blend_mode = 0
glow_hdr_threshold = 0.0
glow_hdr_scale = 1.18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vy6wh"]
bg_color = Color(0, 0, 0, 0.576471)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08n7e"]
bg_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfeyn"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s43b4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wefy6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_2gkx4"]
Button/styles/focus = SubResource("StyleBoxFlat_08n7e")
Button/styles/hover = SubResource("StyleBoxFlat_dfeyn")
Button/styles/normal = SubResource("StyleBoxFlat_s43b4")
Button/styles/pressed = SubResource("StyleBoxFlat_wefy6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikp72"]
bg_color = Color(0, 0, 0, 0.580392)
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qh7x1"]
bg_color = Color(0, 0, 0, 1)
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sltfm"]
bg_color = Color(0, 0, 0, 0.443137)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(1, 1, 1, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ifvr"]
bg_color = Color(0.494118, 0.494118, 0.494118, 0.686275)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Editor" type="Node2D"]
script = ExtResource("1_nvkhc")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_stjhn")

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource("2_kwb2o")

[node name="EditorUI" type="CanvasLayer" parent="."]
layer = 100

[node name="ParallaxBackground" type="ParallaxBackground" parent="EditorUI"]

[node name="BackgroundColor" type="ColorRect" parent="EditorUI/ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LiveCodePanel" type="PanelContainer" parent="EditorUI"]
offset_left = 793.0
offset_top = 5.0
offset_right = 1149.0
offset_bottom = 644.0
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_vy6wh")
script = ExtResource("3_4fm5q")

[node name="Croll" type="ScrollContainer" parent="EditorUI/LiveCodePanel"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="LiveCode" type="Label" parent="EditorUI/LiveCodePanel/Croll"]
layout_mode = 2

[node name="GetCode" type="Button" parent="EditorUI/LiveCodePanel"]
layout_mode = 2
size_flags_vertical = 8
theme = SubResource("Theme_2gkx4")
text = "Copy"

[node name="SchematicPanel" type="PanelContainer" parent="EditorUI"]
offset_right = 277.0
offset_bottom = 644.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ikp72")
script = ExtResource("5_txyhk")

[node name="VBoxContainer" type="VBoxContainer" parent="EditorUI/SchematicPanel"]
layout_mode = 2

[node name="SearchBox" type="LineEdit" parent="EditorUI/SchematicPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_qh7x1")
theme_override_styles/focus = SubResource("StyleBoxFlat_qh7x1")
placeholder_text = "Schematic name"
caret_blink = true

[node name="PanelContainer" type="Control" parent="EditorUI/SchematicPanel/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SettingUI" type="VFlowContainer" parent="EditorUI"]
offset_right = 1918.0
offset_bottom = 40.0
script = ExtResource("6_4411a")

[node name="Button" type="Button" parent="EditorUI/SettingUI"]
layout_mode = 2
text = "Setting"

[node name="VBoxContainer" type="VBoxContainer" parent="EditorUI/SettingUI"]
visible = false
layout_mode = 2

[node name="LiveCode" type="CheckBox" parent="EditorUI/SettingUI/VBoxContainer"]
layout_mode = 2
text = "Show live code panel"

[node name="VFlowContainer" type="VFlowContainer" parent="EditorUI/SettingUI"]
layout_mode = 2

[node name="Label" type="Label" parent="EditorUI/SettingUI/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "FPS"
vertical_alignment = 1

[node name="Label2" type="Label" parent="EditorUI/SettingUI/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 4
vertical_alignment = 1

[node name="Label3" type="Label" parent="EditorUI/SettingUI/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 8
vertical_alignment = 1

[node name="LogPanel" type="PanelContainer" parent="EditorUI"]
offset_left = 3.0
offset_top = 901.0
offset_right = 1921.0
offset_bottom = 1002.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sltfm")
script = ExtResource("7_oeyp2")

[node name="MarginContainer" type="MarginContainer" parent="EditorUI/LogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="EditorUI/LogPanel/MarginContainer" groups=["LogContainer"]]
layout_mode = 2
size_flags_horizontal = 0

[node name="SelectRectangle" type="Node2D" parent="."]
position = Vector2(20000, 0)

[node name="Panel" type="Panel" parent="SelectRectangle"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5ifvr")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
enable_node_path = NodePath(".")

[connection signal="item_rect_changed" from="EditorUI/LiveCodePanel" to="EditorUI/LogPanel" method="_on_live_code_panel_item_rect_changed"]
[connection signal="resized" from="EditorUI/LiveCodePanel" to="EditorUI/LogPanel" method="_on_live_code_panel_resized"]
[connection signal="visibility_changed" from="EditorUI/LiveCodePanel" to="EditorUI/LogPanel" method="_on_live_code_panel_visibility_changed"]
[connection signal="button_down" from="EditorUI/LiveCodePanel/GetCode" to="." method="_on_get_code_button_down"]
[connection signal="resized" from="EditorUI/SchematicPanel" to="EditorUI/LogPanel" method="_on_schematic_panel_resized"]
[connection signal="visibility_changed" from="EditorUI/SchematicPanel" to="EditorUI/LogPanel" method="_on_schematic_panel_visibility_changed"]
[connection signal="text_changed" from="EditorUI/SchematicPanel/VBoxContainer/SearchBox" to="." method="_on_search_box_text_changed"]
